# cloud-music-mcp-extended

./: .gitignore  LICENSE  README.md  cloud-music-mcp-extension-task.md  pyproject.toml
src/cloud_music_mcp/: __init__.py  __main__.py  api.py  auth.py  log.py  main.py  run_login.py
